[package]
name = "note_render"
version = "0.1.0"
authors = ["ej <EJPfister55@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { git = "https://github.com/Boscop/web-view.git", rev = "38d43cc2c025863d27ef7ec826d3bad127b87e97" }
include_dir = "0.5.0"
pulldown-cmark = "0.6.1"
regex = "1.3.3"
lazy_static = "1.4.0"
hotwatch = "0.4.3"
simple-server = "0.4.0"
htmlescape = "0.3.1"
